--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,11 @@
-body {
+/*body {
     font-family: Arial, sans-serif;
     margin: 20px;
     padding: 20px;
+}
+*/
+body {
+    background-color: yellow; /* Should turn the entire background yellow */
 }
 
 header h1 {
