--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,7 @@ header h1 {
 }
 
 .introduction {
-    background-color: #4c3df2;
+    background-color: #676091;
     padding: 10px;
     border: 2px solid #ccc;
 }
